#10 Release BellEven and Evens

--- a/exampe.html
+++ b/exampe.html
@@ -23,6 +23,7 @@
       </bell-point>
       <bell-point name="B">
         <bell-button step="S">B->S</bell-button>
+        <bell-even act="alert(self)"></bell-even>
       </bell-point>
       <bell-point name="C">
         <bell-button step="S">C->S</bell-button>
