#5 fix bug part-2

--- a/exampe.html
+++ b/exampe.html
@@ -37,6 +37,7 @@
         background-color: #cc00ff;
       }
       bell-hop {
+        overflow: hidden;
         width: 300px !important;
         height: 200px !important;
         border-radius: 13px;
@@ -47,10 +48,10 @@
         gap: 5px;
       }
       .begin {
-        animation: begin 10s forwards ease-in-out;
+        animation: begin 1s forwards ease-in-out;
       }
       .exit {
-        animation: exit 10s forwards ease-in-out;
+        animation: exit 1s forwards ease-in-out;
       }
       @keyframes begin {
         0% {
