--- a/exampe.html
+++ b/exampe.html
@@ -83,6 +83,7 @@
         <bell-button step="B">S->B</bell-button>
         <bell-button step="C">S->C</bell-button>
         <bell-button to="D">S=>D</bell-button>
+        <bell-button step="E">S->E</bell-button>
       </bell-point>
       <bell-point name="A">
         <bell-button step="S">A->S</bell-button>
@@ -98,6 +99,9 @@
       </bell-point>
       <bell-point name="C">
         <bell-button step="S">C->S</bell-button>
+      </bell-point>
+      <bell-point class="E">
+        <bell-button step="S">E->S</bell-button>
       </bell-point>
     </bell-hop>
     <script src="index.js"></script>
