--- a/exampe.html
+++ b/exampe.html
@@ -38,7 +38,7 @@
       bell-hop {
         overflow: hidden;
         width: 400px !important;
-        height: 270px !important;
+        height: 300px !important;
         border-radius: 13px;
         border: 5px solid #7b00b5;
         background-color: #7f005599;
@@ -76,14 +76,16 @@
   </head>
   <body>
     <h1>bell-hop</h1>
-    <bell-hop ain="begin" aex="exit">
+    <bell-hop class="Y" ain="begin" aex="exit">
       <bell-point active root name="S">
         <bell-button step="A">S->A</bell-button>
         <bell-button step="B">S->B</bell-button>
         <bell-button step="C">S->C</bell-button>
         <bell-button to="D">S=>D</bell-button>
         <bell-button step="E">S->E</bell-button>
+        <bell-button step="F">S->F</bell-button>
         <bell-button step="G">S->G</bell-button>
+        <bell-button step="I">S->I</bell-button>
       </bell-point>
       <bell-point name="A">
         <bell-button step="S">A->S</bell-button>
@@ -103,8 +105,27 @@
       <bell-point class="E">
         <bell-button step="S">E->S</bell-button>
       </bell-point>
-      <bell-point class="G" time="1000" to="S">
+      <bell-point class="F" time="1000" to="S">
         <p>After one second...</p>
+      </bell-point>
+      <bell-point class="G">
+        <bell-button step="S">G->S</bell-button>
+        <bell-hop class="X">
+          <bell-point class="H" root active></bell-point>
+        </bell-hop>
+      </bell-point>
+      <bell-point class="I">
+        <bell-button step="S">I->S</bell-button>
+        <bell-button step="T">I->T</bell-button>
+        <bell-point class="T">
+          <bell-button step="I">T->I</bell-button>
+          <bell-button step="J">T->J</bell-button>
+          <bell-point class="J">
+            <p>The End.</p>
+            <bell-button step="T">J->T</bell-button>
+            <bell-button to="S">J=>S</bell-button>
+          </bell-point>
+        </bell-point>
       </bell-point>
     </bell-hop>
     <script src="index.js"></script>
