--- a/exampe.html
+++ b/exampe.html
@@ -35,13 +35,29 @@
         border-radius: 3px;
         background-color: #cc00ff;
       }
-      bell-hop {
+      bell-hop.Y {
         overflow: hidden;
-        width: 400px !important;
-        height: 300px !important;
+        width: 300px !important;
+        height: 400px !important;
         border-radius: 13px;
         border: 5px solid #7b00b5;
         background-color: #7f005599;
+      }
+      bell-hop.X {
+        & {
+          overflow: hidden;
+          width: 90%;
+          height: 70%;
+          border-radius: 3px;
+          background-color: #33004b;
+        }
+        & bell-button {
+          background-color: #4000ff;
+        }
+        & p.terminal.string i {
+          color: #855cff;
+          font-family: 'Courier New', Courier, monospace;
+        }
       }
       bell-point {
         gap: 5px;
@@ -81,17 +97,18 @@
         <bell-button step="A">S->A</bell-button>
         <bell-button step="B">S->B</bell-button>
         <bell-button step="C">S->C</bell-button>
-        <bell-button to="D">S=>D</bell-button>
+        <bell-button goto="D">S=>D</bell-button>
         <bell-button step="E">S->E</bell-button>
         <bell-button step="F">S->F</bell-button>
         <bell-button step="G">S->G</bell-button>
         <bell-button step="I">S->I</bell-button>
+        <bell-button goto="L" bind="X">S~X=>L</bell-button>
       </bell-point>
       <bell-point name="A">
         <bell-button step="S">A->S</bell-button>
         <bell-button step="D">A->D</bell-button>
         <bell-point name="D">
-          <bell-button to="S">D=>S</bell-button>
+          <bell-button goto="S">D=>S</bell-button>
           <bell-button step="A">D->A</bell-button>
         </bell-point>
       </bell-point>
@@ -111,7 +128,16 @@
       <bell-point class="G">
         <bell-button step="S">G->S</bell-button>
         <bell-hop class="X">
-          <bell-point class="H" root active></bell-point>
+          <bell-point class="H" root active>
+            <p class="terminal string"><i>Modest bell-hop terminal_</i></p>
+            <bell-button step="L">H->L</bell-button>
+            <bell-button bind="Y" goto="S">H~Y=>S</bell-button>
+            <bell-button bind="Y" goto="D">H~Y=>D</bell-button>
+          </bell-point>
+          <bell-point class="L">
+            <bell-button step="H">L->H</bell-button>
+            <bell-button goto="S" bind="Y">L~Y=>S</bell-button>
+          </bell-point>
         </bell-hop>
       </bell-point>
       <bell-point class="I">
