#27 bell-pod release

--- a/exampe.html
+++ b/exampe.html
@@ -103,7 +103,7 @@
         <bell-button step="G">S->G</bell-button>
         <bell-button step="I">S->I</bell-button>
         <bell-button goto="L" bind="X">S~X=>L</bell-button>
-        <bell-pod points="S A">
+        <bell-pod points="S A L">
           <p>WW</p>
         </bell-pod>
       </bell-point>
