#29 URL Params Release
- The `bell-hop`.`stepTo` method has been restored;
- Added the ability to skip animations;
- `bell-hop` can be manipulated via URL;

--- a/exampe.html
+++ b/exampe.html
@@ -121,11 +121,11 @@
       </bell-point>
       <bell-point name="C">
         <bell-button step="S">C->S</bell-button>
-        <bell-button step="I">C->I</bell-button>
-        <bell-point class="I">
+        <bell-button step="N">C->I</bell-button>
+        <bell-point class="N">
           <bell-button step="C">I->C</bell-button>
         </bell-point>
-        <bell-pod points="C I">
+        <bell-pod points="C N">
           <p>Pod elem</p>
         </bell-pod>
       </bell-point>
@@ -159,7 +159,7 @@
           <bell-point class="J">
             <p>The End.</p>
             <bell-button step="T">J->T</bell-button>
-            <bell-button to="S">J=>S</bell-button>
+            <bell-button goto="S">J=>S</bell-button>
           </bell-point>
         </bell-point>
       </bell-point>
